[gd_scene load_steps=4 format=3 uid="uid://ds40wxfs84avs"]

[ext_resource type="Script" path="res://player/camera_rig.gd" id="1_d3d3w"]
[ext_resource type="Shader" path="res://player/fg_viewport_1.gdshader" id="2_m5sjt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ypdt7"]
shader = ExtResource("2_m5sjt")
shader_parameter/MULTIPLIER = 0.5
shader_parameter/SCALE = 0.3
shader_parameter/SOFTNESS = 0.675
shader_parameter/BASE_OPACITY = 1.0

[node name="CameraRig" type="Node3D"]
script = ExtResource("1_d3d3w")

[node name="base_cam" type="Camera3D" parent="."]
cull_mask = 0

[node name="background_viewport_container" type="SubViewportContainer" parent="base_cam"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="background_viewport" type="SubViewport" parent="base_cam/background_viewport_container"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="background_cam" type="Camera3D" parent="base_cam/background_viewport_container/background_viewport"]
cull_mask = 1

[node name="foreground_viewport_container" type="SubViewportContainer" parent="base_cam"]
material = SubResource("ShaderMaterial_ypdt7")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="foreground_viewport" type="SubViewport" parent="base_cam/foreground_viewport_container"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="foreground_cam" type="Camera3D" parent="base_cam/foreground_viewport_container/foreground_viewport"]
cull_mask = 2
